# gtfold

./: .gitignore  README
F10/: README  autogen.sh  configure.in  gtfold_config.h  gtfold_config.h.in
F10/data/: Makefile.am
F10/data/Andronescu/: Makefile.am  Makefile.in  temp.txt
F10/data/Turner99/: Makefile.am  Makefile.in
F10/include/: Makefile.am  algorithms.h  constants.h  loader.h  main.h
F10/src/: Makefile.am  Makefile.in  algorithms.c  traceback.c
gtfold-mfe/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  STYLE  TODO  configure  configure.in  gtfold_config.h  gtfold_config.h.in  test.txt
gtfold-mfe/data/: Makefile.am  Makefile.in
gtfold-mfe/data/Andronescu/: Makefile.in
gtfold-mfe/data/Turner04/: Makefile.in
gtfold-mfe/data/Turner04-errors/Turner04-errors/: Makefile  Makefile.am
gtfold-mfe/data/Turner99/: Makefile.in
gtfold-mfe/include/: Makefile.am  Makefile.in  algorithms-partition.h  algorithms.h  commented_constants.txt  constants.h  constraints.h  data.h  energy.h  global.h  loader.h  main-c.h  main.h  options.h  partition-dangle.h  subopt_traceback.h  traceback.h  utils.h
gtfold-mfe/src/: Makefile  Makefile.am  Makefile.in  algorithms-partition.c  algorithms.c  constraints.cc  energy.c  global.c  loader.cc  main.cc  options.cc  partition-dangle.c  partition-dangle.cc  random-sample.cc  shapereader.cc  subopt_traceback.cc  traceback.c  utils.cc
gtfold-mfe/src/.deps/: algorithms.Po  constraints.Po  energy.Po  global.Po  loader.Po  main.Po  options.Po  shapereader.Po  subopt_traceback.Po  traceback.Po  utils.Po
gtfold-mfe/test_data/sequences/16S/: K00421.seq  X00794.seq  X52949.seq  X54252.seq  X54253.seq  X59604.seq  X65063.seq  X98467.seq  Y00266.seq  Z17210.seq  Z17224.seq
gtfold-mfe/test_data/sequences/23S/: J01527.seq  K01868.seq  M67497.seq  X14386.seq  X52392.seq  X52949.seq  X53361.seq  X54252.seq
gtfold-mfe/test_data/sequences/5S/: d.5.a.D.mobilis.seq
gtfold-mfe/test_data/structures/GTfold/16S/: K00421.ct  X00794.ct  X52949.ct  X54253.ct  X59604.ct  X65063.ct  X98467.ct  Y00266.ct  Z17210.ct  Z17224.ct
gtfold-mfe/test_data/structures/GTfold/23S/: J01527.ct  K01868.ct  M67497.ct  X14386.ct  X52392.ct  X52949.ct  X53361.ct  X54252.ct
gtfold-mfe/test_data/structures/RNAfold/16S/: K00421.ct  X00794.ct  X52949.ct  X54252.ct  X54253.ct  X59604.ct  X65063.ct  X98467.ct  Y00266.ct  Z17210.ct  Z17224.ct
gtfold-mfe/test_data/structures/RNAfold/23S/: J01527.ct  K01868.ct  M67497.ct  X14386.ct  X52392.ct  X52949.ct  X53361.ct  X54252.ct
gtfold-mfe/test_data/structures/UNAfold/16S/: K00421.ct  X00794.ct  X52949.ct  X54252.ct  X54253.ct  X59604.ct  X65063.ct  X98467.ct  Y00266.ct  Z17210.ct  Z17224.ct
gtfold-mfe/test_data/structures/UNAfold/23S/: J01527.ct  K01868.ct  M67497.ct  X14386.ct  X52392.ct  X52949.ct  X53361.ct  X54252.ct
gtfold-mfe/test_data/structures/native/16S/: K00421.ct  X00794.ct  X52949.ct  X54252.ct  X59604.ct  X98467.ct  Y00266.ct  Z17224.ct
gtfold-mfe/test_data/structures/native/23S/: J01527.ct  K01868.ct  M67497.ct  X52949.ct  X54252.ct
