## Process this file with automake to produce Makefile.in

SUBDIRS = src include data

DIST_SUBDIRS = src include data

include_HEADERS = gtfold_config.h

CLEANFILES = *~
MAINTAINERCLEANDIRS  = autom4te.cache
# MAINTAINERCLEANFILES = libtool gtfold_config.h.in
MAINTAINERCLEANFILES = gtfold_config.h gtfold_config.h.in

## use this variable to include non-standard files in the distribution
EXTRA_DIST=autogen.sh
