## Process this file with automake to produce Makefile.in

gtfold_datadir = $(datadir)/@PACKAGE@/Andronescu

gtfold_data_DATA = \
	stack.dat\
	miscloop.dat\
	dangle.dat\
	loop.dat\
	int11.dat\
	int21.dat\
	int22.dat\
	tloop.dat\
	triloop.dat\
	tstackh.dat\
	tstacki.dat

EXTRA_DIST = $(gtfold_data_DATA)

CLEANFILES = *~

